add: delete todo
